--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 	<form id="login_form" action="login.php" method="post">
 		<label>Username:</label> <input type="text" name="username"><br>
 		<label>Password:</label> <input type="text" name="password"><br>
-		<button>Login</button>
+		<input type="submit" value="Login">
 	</form>
 </body>
 </html>
