--- a/searchRoomType.html
+++ b/searchRoomType.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-    <title>Search Renter</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>Search By Room Type</title>
 </head>
 
 <script>
@@ -26,7 +27,7 @@
 
 <body>
     <h1> Search for housing options by room types</h1>
-        <select id="LastNinput">
+        <select class="form-control" id="LastNinput">
             <option value="1"> Single </option>
             <option value="2"> Double </option>
             <option value="3"> Triple </option>
