--- a/searchAme.html
+++ b/searchAme.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-    <title>Search Renter</title>
+    <title>Search By Amenity Types</title>
 </head>
 
 <script>
@@ -25,7 +25,7 @@
 
 <body>
     <h1> Search for housing options by amenity types</h1>
-        <input class="xlarge" id="LastNinput" type="search" size="30" placeholder="Enter the amenity">
+    <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter the amenity">
     <div id="LastNresult"> Search Result </div>
 </body>
 </html>
