--- a/searchNumRes.html
+++ b/searchNumRes.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-    <title>Search Renter</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>Search By Number of Residents</title>
 </head>
 
 <script>
@@ -25,7 +26,7 @@
 
 <body>
     <h1> Search for housing options by number of residents </h1>
-        <input class="xlarge" id="LastNinput" type="search" size="30" placeholder="Enter the number of residents">
+    <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter the number of residents">
     <div id="LastNresult"> Search Result </div>
 </body>
 </html>
