--- a/search_page.html
+++ b/search_page.html
@@ -7,6 +7,7 @@
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
     <script src="./js/search_page.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Search Renter</title>
 </head>
 
@@ -19,11 +20,11 @@
 
     <div id="btn_holder">
 
-        <input type="submit" id="btn_1" value="Search by amenity types" onclick="get_searchAme()"> <br>
-        <input type="submit" id="btn_2" value="Search by nearby locations" onclick="get_searchnearby()"> <br>
-        <input type="submit" id="btn_3" value="Search by number of residents" onclick="get_searchNumRes()"> <br>
-        <input type="submit" id="btn_4" value="Search by rent" onclick="get_searchrent()"> <br>
-        <input type="submit" id="btn_5" value="Search by room types" onclick="get_searchRoomType()">
+        <input type="submit" class="btn btn-primary" id="btn_1" value="Search by amenity types" onclick="get_searchAme()"> 
+        <input type="submit" class="btn btn-primary" id="btn_2" value="Search by nearby locations" onclick="get_searchnearby()">
+        <input type="submit" class="btn btn-primary" id="btn_3" value="Search by number of residents" onclick="get_searchNumRes()"> 
+        <input type="submit" class="btn btn-primary" id="btn_4" value="Search by rent" onclick="get_searchrent()"> 
+        <input type="submit" class="btn btn-primary" id="btn_5" value="Search by room types" onclick="get_searchRoomType()">
 
     </div>
 
