--- a/searchrent.html
+++ b/searchrent.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
-    <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-    <title>Search Renter</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script>
+        <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+                integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+                crossorigin="anonymous">
+        <title>Search By Rent</title>
 </head>
 
 <script>
-        $(document).ready(function() {
-                $("#LastNinput").change(function() {
-                $.ajax({
-                        url: 'searchrent.php',
-                        data: {searchrent: $("#LastNinput").val()},
-                        success: function(data){
-                                $('#LastNresult').html(data);
-                        }
+        $(document).ready(function () {
+                $("#LastNinput").change(function () {
+                        $.ajax({
+                                url: 'searchrent.php',
+                                data: { searchrent: $("#LastNinput").val() },
+                                success: function (data) {
+                                        $('#LastNresult').html(data);
+                                }
+                        });
                 });
         });
-});
 </script>
 
 <body>
-    <h1> Search for housing options below the input price </h1>
-        <input class="xlarge" id="LastNinput" type="search" size="30" placeholder="Enter a number">
-    <div id="LastNresult"> Search Result </div>
+
+        <h1> Search for housing options below the input price </h1>
+
+        <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter a number">
+
+        <div id="LastNresult"> Search Result </div>
+
 </body>
+
 </html>
