--- a/searchnearby.html
+++ b/searchnearby.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script>
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Search By Nearby Locations</title>
 </head>
 
@@ -29,11 +29,11 @@
 
     <h1> Search housing options based on nearby locations </h1>
 
-    <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter the keyword for nearby location.">
+    <input class="form-control" id="LastNinput" type="search" size="30"
+        placeholder="Enter the keyword for nearby location.">
 
     <div id="LastNresult"> Search Result </div>
 
 </body>
 
 </html>
-
