--- a/searchNumRes.html
+++ b/searchNumRes.html
@@ -25,8 +25,8 @@
 </script>
 
 <body>
-    <h1> Search for housing options by number of residents </h1>
+    <h1 style="text-align:center;"> Search for housing options by number of residents </h1>
     <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter the number of residents">
-    <div id="LastNresult"> Search Result </div>
+    <div id="LastNresult" style="text-align:center;"> <h4>Search Result</h4> </div>
 </body>
 </html>
