--- a/searchRoomType.html
+++ b/searchRoomType.html
@@ -26,14 +26,14 @@
 </script>
 
 <body>
-    <h1> Search for housing options by room types</h1>
+    <h1 style="text-align:center;"> Search for housing options by room types</h1>
         <select class="form-control" id="LastNinput">
             <option value="1"> Single </option>
             <option value="2"> Double </option>
             <option value="3"> Triple </option>
             <option value="4"> Quadruple </option>
         </select>
-    <div id="LastNresult"> Search Result </div>
+        <div id="LastNresult" style="text-align:center;"> <h4>Search Result</h4> </div>
 
 </body>
 
