--- a/searchnearby.html
+++ b/searchnearby.html
@@ -27,12 +27,12 @@
 
 <body>
 
-    <h1> Search housing options based on nearby locations </h1>
+    <h1 style="text-align:center;"> Search housing options based on nearby locations </h1>
 
     <input class="form-control" id="LastNinput" type="search" size="30"
         placeholder="Enter the keyword for nearby location.">
 
-    <div id="LastNresult"> Search Result </div>
+        <div id="LastNresult" style="text-align:center;"> <h4>Search Result</h4> </div>
 
 </body>
 
