--- a/searchrent.html
+++ b/searchrent.html
@@ -29,11 +29,11 @@
 
 <body>
 
-        <h1> Search for housing options below the input price </h1>
+        <h1 style="text-align:center;"> Search for housing options below the input price </h1>
 
         <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter a number">
 
-        <div id="LastNresult"> Search Result </div>
+        <div id="LastNresult" style="text-align:center;"> <h4>Search Result</h4> </div>
 
 </body>
 
