--- a/searchAme.html
+++ b/searchAme.html
@@ -25,8 +25,8 @@
 </script>
 
 <body>
-    <h1> Search for housing options by amenity types</h1>
+    <h1 style="text-align:center;"> Search for housing options by amenity types</h1>
     <input class="form-control" id="LastNinput" type="search" size="30" placeholder="Enter the amenity">
-    <div id="LastNresult"> Search Result </div>
+    <div id="LastNresult" style="text-align:center;"> <h4>Search Result</h4> </div>
 </body>
 </html>
