--- a/search_page.html
+++ b/search_page.html
@@ -7,6 +7,7 @@
     <script src="./js/jquery-1.6.2.min.js" type="text/javascript"></script> 
     <script src="./js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
     <script src="./js/search_page.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./css/search_page.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Search Renter</title>
 </head>
@@ -14,9 +15,9 @@
 
 <body>
 
-    <h1> Housing Search </h1>
+    <h1 id="head"> Housing Search </h1>
 
-    <p>Select your options</p>
+    <h2 id="option_par">Select your options</h2>
 
     <div id="btn_holder">
 
