--- a/searchRoomType.html
+++ b/searchRoomType.html
@@ -28,6 +28,7 @@
 <body>
     <h1 style="text-align:center;"> Search for housing options by room types</h1>
         <select class="form-control" id="LastNinput">
+            <option value="0"> ----SELECT---- </option>
             <option value="1"> Single </option>
             <option value="2"> Double </option>
             <option value="3"> Triple </option>
