--- a/signupForm.html
+++ b/signupForm.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="signup.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
     <div><label>Phone:</label> <input type="text" name="phone"></div>
     <div><label>Username:</label> <input type="text" name="username"></div>
     <div><label>Password:</label> <input type="password" name="password"></div>
-    <input type="submit">
+    <input type="submit" class="btn btn-primary">
   </form>
 
 </body>
